# MASA-StarPU

./: README.md
masa-ompss-1.0.1.1024/: AAX29205.1.fasta  AUTHORS  Makefile  Makefile.am  Makefile.am.bck  Makefile.in  Makefile.in.bck  README  config.status  configure  configure.ac  configure.bck  hiv.fasta  hiv2.fasta  masa-ompss  masa-ompss.script  masa-starpu  masa-starpu.script  mcxx_OmpSsAligner.cpp  mcxx_OmpSsAlignerParameters.cpp  mcxx_StarPuAligner.cpp  mcxx_StarPuAlignerParameters.cpp  mcxx_main.cpp
masa-ompss-1.0.1.1024/autom4te.cache/: output.0  requests  traces.0
masa-ompss-1.0.1.1024/libs/masa-core/: Makefile  config.status
masa-ompss-1.0.1.1024/libs/masa-core/src/common/.deps/: libmasa_a-AlignerManager.Po  libmasa_a-AlignerPool.Po  libmasa_a-BestScoreList.Po  libmasa_a-BlocksFile.Po  libmasa_a-CrosspointsFile.Po  libmasa_a-Job.Po  libmasa_a-Properties.Po  libmasa_a-RecurrentTimer.Po  libmasa_a-SpecialRowReader.Po  libmasa_a-SpecialRowWriter.Po  libmasa_a-Status.Po  libmasa_a-Timer.Po  libmasa_a-utils.Po
masa-ompss-1.0.1.1024/libs/masa-core/src/common/biology/.deps/: libmasa_a-Alignment.Po  libmasa_a-AlignmentBinaryFile.Po  libmasa_a-AlignmentParams.Po  libmasa_a-Sequence.Po  libmasa_a-SequenceData.Po  libmasa_a-SequenceInfo.Po
masa-ompss-1.0.1.1024/libs/masa-core/src/common/configs/.deps/: libmasa_a-ConfigParser.Po  libmasa_a-Configs.Po
masa-ompss-1.0.1.1024/libs/masa-core/src/common/exceptions/.deps/: libmasa_a-IOException.Po  libmasa_a-IllegalArgumentException.Po
masa-ompss-1.0.1.1024/libs/masa-core/src/common/io/.deps/: libmasa_a-Buffer2.Po  libmasa_a-BufferLogger.Po  (+15 more)
masa-ompss-1.0.1.1024/libs/masa-core/src/libmasa/.deps/: libmasa_a-Grid.Po  libmasa_a-libmasa.Po
masa-ompss-1.0.1.1024/libs/masa-core/src/libmasa/aligners/: AbstractBlockAligner.cpp
masa-ompss-1.0.1.1024/libs/masa-core/src/masanet/.deps/: libmasa_a-MasaNet.Po  libmasa_a-MasaNetStatus.Po  libmasa_a-Peer.Po  libmasa_a-PeerList.Po
masa-ompss-1.0.1.1024/libs/masa-core/src/stage1/.deps/: libmasa_a-sw_stage1.Po
masa-ompss-1.0.1.1024/libs/masa-core/src/stage2/.deps/: libmasa_a-sw_stage2.Po
masa-ompss-1.0.1.1024/libs/masa-core/src/stage3/.deps/: libmasa_a-sw_stage3.Po
masa-ompss-1.0.1.1024/libs/masa-core/src/stage4/.deps/: libmasa_a-sw_stage4.Po
masa-ompss-1.0.1.1024/libs/masa-core/src/stage5/.deps/: libmasa_a-sw_stage5.Po
masa-ompss-1.0.1.1024/libs/masa-core/src/stage6/.deps/: libmasa_a-sw_stage6.Po
masa-ompss-1.0.1.1024/src/: OmpSsAligner.cpp  OmpSsAligner.hpp  OmpSsAlignerParameters.cpp  OmpSsAlignerParameters.hpp  StarPuAligner.cpp  StarPuAligner.hpp  StarPuAlignerParameters.cpp  StarPuAlignerParameters.hpp  config.h  config.h.in  main.cpp
masa-ompss-1.0.1.1024/src/.deps/: masa_ompss-OmpSsAligner.Po  masa_ompss-OmpSsAlignerParameters.Po  masa_ompss-main.Po  masa_starpu-OmpSsAligner.Po  masa_starpu-OmpSsAlignerParameters.Po  masa_starpu-StarPuAligner.Po  masa_starpu-StarPuAlignerParameters.Po  masa_starpu-main.Po
masa-ompss-1.0.1.1024/work.tmp/: info  statistics  statistics.ALIGNER  statistics_01.00  status
(+29 files in other folders)
